Update timeseries lesson

--- a/documents/R-timeseries.Rmd
+++ b/documents/R-timeseries.Rmd
@@ -151,7 +151,7 @@ head(mloa_2001$datetime) # in POSIXct
 
 ```
 
-### Challenge 
+### Challenge 1
 
  - Remove the NA's (-99 and -999) in `rel_humid`, `temp_C_2m`, `windSpeed_m_s`
  - Use `dplyr` to calculate the mean monthly temperature (`temp_C_2m`) using the `datetime` column (*HINT: look at `lubridate` functions like `month()`*)
@@ -234,3 +234,87 @@ df %>% filter(mon=="Jul") %>% # or month==7
   
   
 ```
+
+
+## Challenge 2: Pressure Transducer (Solinst) Data Logger 
+
+Let's practice with another data file, a logger that records water temperature and river stage every 15 minutes from the NF American River. You can [download the file](data/2015_NFA_solinst_08_05.csv) or read the file in (directly from the webpage)[https://raw.githubusercontent.com/gge-ucd/wRangling_Seminar/master/data/2015_NFA_solinst_08_05.csv], we've practiced both now. 
+
+*This dataset has 35,038 observations for water temperature, and stage (pressure transducer info).*
+
+ > First part of the challenge: Read in and assign the data to your environment using either the direct webpage URL, or the downloaded file.
+
+```{r solinst_data, eval=T, echo=F}
+
+# pressure transducer data
+
+# read in file from downloaded folder
+# dat <- read.csv("data/2015_NFA_solinst_08_05.csv", skip=13)
+
+# read in file directly from a weblink
+dat <- read.csv("https://raw.githubusercontent.com/gge-ucd/wRangling_Seminar/master/data/2015_NFA_solinst_08_05.csv", skip=13)
+
+library(lubridate, warn.conflicts = F)
+library(dplyr, warn.conflicts = F)
+
+summary(dat)
+names(dat)
+
+```
+
+### Challenge 2
+
+ - Make a `datetime` column and format as `POSIXct`
+ - Calculate Weekly **Mean, Max, Min** Water Temperatures and plot as point or line plot *(HINT: `dplyr` function)*
+ - Calculate Hourly mean **Level** for April through June and make a line plot (using `ggplot2`). 
+ - Make a ggplot geom_pointrange plot of the avg. max, min monthly temperatures.
+
+**Solutions**
+
+```{r solution2, eval=T, echo=F}
+
+# make datetime column
+dat$datetime <- paste0(dat$Date, " ", dat$Time)
+# format as POSIXct using lubridate
+dat$datetime <- ymd_hms(dat$datetime)
+
+library(magrittr) # for use of " %<>% "
+library(ggplot2)
+
+dat %<>% # what did this do?
+  mutate(yr = year(datetime),
+         mon = month(datetime),
+         wk = week(datetime),
+         DOY = yday(datetime),
+         hr = hour(datetime))
+
+head(dat)
+
+# Weekly Plot
+dat %>%  select(Level, Temperature, wk) %>% # select only cols we want
+  group_by(wk) %>% 
+  summarise_each(funs(mean, max, min)) %>%  # apply functions to each column
+  ggplot() + geom_point(aes(x=wk, y=Temperature_max), color="gray40", fill="maroon", pch=21) +
+  geom_line(aes(x=wk, y=Temperature_mean), color="red3")+
+  geom_point(aes(x=wk, y=Temperature_min), color="gray40", fill="navyblue", pch=21) + xlab("July 2015: Week")
+
+
+# Hourly July Plot
+dat %>%  filter(mon>=4 & mon<=6) %>% 
+  select(Level, DOY, hr, yr) %>%
+  group_by(yr, DOY, hr) %>% 
+  summarise(mean_Level=mean(Level)) %>% 
+  mutate(datetimes = ymd_hms(strptime(paste0(yr,"-",DOY," ",hr, ":00"), format="%Y-%j %H:%M"))) %>% 
+  ggplot() + geom_line(aes(x=datetimes, y=mean_Level), color="forestgreen") + xlab("Date") + ylab("Hourly Stage (m)")
+
+# Monthly Plot
+dat %>%  
+  select(Temperature, mon) %>% # select only cols we want
+  group_by(mon) %>% 
+  summarise_each(funs(mean, max, min)) %>%  # apply functions to each column
+  ggplot() + geom_pointrange(aes(x=mon, y=mean, ymax=max, ymin=min), fill="maroon", size=1, pch=21) + xlab("Avg Monthly Water Temperature: Months")
+
+
+
+```
+
