update links for download of solinst data

--- a/documents/R-timeseries.Rmd
+++ b/documents/R-timeseries.Rmd
@@ -238,7 +238,7 @@ df %>% filter(mon=="Jul") %>% # or month==7
 
 ## Challenge 2: Pressure Transducer (Solinst) Data Logger 
 
-Let's practice with another data file, a logger that records water temperature and river stage every 15 minutes from the NF American River. You can [download the file](data/2015_NFA_solinst_08_05.csv) or read the file in (directly from the webpage)[https://raw.githubusercontent.com/gge-ucd/wRangling_Seminar/master/data/2015_NFA_solinst_08_05.csv], we've practiced both now. 
+Let's practice with another data file, a logger that records water temperature and river stage every 15 minutes from the NF American River. You can [download the file](2015_NFA_solinst_08_05.csv) or read the file in directly from the [webpage](https://raw.githubusercontent.com/gge-ucd/wRangling_Seminar/master/data/2015_NFA_solinst_08_05.csv), we've practiced both now. 
 
 *This dataset has 35,038 observations for water temperature, and stage (pressure transducer info).*
 
